# Atomic-Disk-Drive

./: Readme.md
solution/: Cargo.toml
solution/src/: atomic_register.rs  common.rs  domain.rs  lib.rs  register_client.rs  register_process.rs  sectors_manager.rs  transfer_lib.rs
